<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_ui_line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:background="#3fff"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_title"
            android:imeOptions="actionSearch"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/color_ui_text"
            android:textColorHint="#666"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_ui_line" />


        <ImageView
            android:id="@+id/ivDel"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="center"
            android:src="@android:drawable/ic_menu_delete"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_ui_line" />

        <ImageView
            android:id="@+id/ivSave"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:scaleType="center"
            android:src="@android:drawable/ic_menu_save" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_ui_line" />

    <include layout="@layout/edit_menu_space" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_ui_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/enable"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/fh"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rgEnable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_true"
                android:textColor="@color/color_ui_text" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_false"
                android:textColor="@color/color_ui_text" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_all"
                android:textColor="@color/color_ui_text" />

        </RadioGroup>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_ui_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/system"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/fh"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rgSystem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_true"
                android:textColor="@color/color_ui_text" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_false"
                android:textColor="@color/color_ui_text" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_all"
                android:textColor="@color/color_ui_text" />

        </RadioGroup>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_ui_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/exclude"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/fh"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rgExclude"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_true"
                android:textColor="@color/color_ui_text" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_false"
                android:textColor="@color/color_ui_text" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_all"
                android:textColor="@color/color_ui_text" />

        </RadioGroup>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_ui_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="launch"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/fh"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rgLaunch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_true"
                android:textColor="@color/color_ui_text" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_false"
                android:textColor="@color/color_ui_text" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_all"
                android:textColor="@color/color_ui_text" />

        </RadioGroup>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_ui_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/packageName"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/fh"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etSearchPkg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#3fff"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_filter"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/color_ui_text"
            android:textColorHint="@color/color_ui_text_hint"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_ui_line" />

        <CheckBox
            android:id="@+id/cbPkgInvert"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:textColor="@color/color_ui_text" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_ui_line" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbFilter"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/filter"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/fh"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#3fff"
            android:gravity="center_vertical"
            android:hint="@string/hint_search"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/color_ui_text"
            android:textColorHint="@color/color_ui_text_hint"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_ui_line" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:text="0"
            android:textColor="@color/color_ui_text"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>